# invy-hub-landing

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
api/: contact.js  index.js
api/_lib/: db.js
api/admin/: login.js  me.js  stats.js
api/admin/messages/: [id].js  index.js
api/admin/messages/[id]/: read.js
backend/: .env.example  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: main.jsx  styles.css
scripts/: api-dev-server.mjs  api-smoke.mjs
supabase/: schema.sql
