[project]
name = "invy-backend"
version = "0.1.0"
description = "Invy FastAPI backend backed by Supabase"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.1",
    "psycopg[binary]>=3.2.13",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
]
